# discord_gamesdk

./: README.md  ffigen.yaml  pubspec.yaml
example/: README.md  pubspec.yaml
example/lib/: main.dart
example/linux/: CMakeLists.txt  my_application.cc
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/windows/: CMakeLists.txt
example/windows/runner/: Runner.rc  main.cpp
lib/: discord_gamesdk.dart  discord_gamesdk_bindings_generated.dart
linux/: CMakeLists.txt
macos/: discord_gamesdk.podspec
macos/Classes/: discord_gamesdk.c
src/: CMakeLists.txt  discord_gamesdk.c
windows/: CMakeLists.txt
